parser.output
   0  $accept : program $end

   1  program : decl_list

   2  decl_list : decl decl_list
   3            | decl

   4  decl : identifier colon type assign expr semicolon
   5       | identifier colon type semicolon
   6       | identifier colon type assign left_brace stmt_list right_brace

   7  stmt : open_stmt
   8       | closed_stmt

   9  closed_stmt : decl
  10              | expr semicolon
  11              | return opt_expr semicolon
  12              | print expr_list semicolon
  13              | for left_paren opt_expr semicolon opt_expr semicolon opt_expr right_paren closed_stmt
  14              | if left_paren expr right_paren closed_stmt else closed_stmt
  15              | left_brace stmt_list right_brace

  16  open_stmt : if left_paren expr right_paren stmt
  17            | if left_paren expr right_paren closed_stmt else open_stmt
  18            | for left_paren opt_expr semicolon opt_expr semicolon opt_expr right_paren open_stmt

  19  stmt_list : not_empty_stmt_list
  20            |

  21  not_empty_stmt_list : stmt not_empty_stmt_list
  22                      | stmt

  23  expr : expr assign and_expr
  24       | and_expr

  25  and_expr : and_expr and compare_expr
  26           | and_expr or compare_expr
  27           | compare_expr

  28  compare_expr : add_expr ne add_expr
  29               | add_expr gt add_expr
  30               | add_expr ge add_expr
  31               | add_expr lt add_expr
  32               | add_expr le add_expr
  33               | add_expr eq add_expr
  34               | add_expr

  35  add_expr : add_expr add mul_expr
  36           | add_expr subtract mul_expr
  37           | mul_expr

  38  mul_expr : mul_expr multiply expon_expr
  39           | mul_expr divide expon_expr
  40           | mul_expr modulus expon_expr
  41           | expon_expr

  42  expon_expr : neg_expr exponentiate expon_expr
  43             | neg_expr

  44  neg_expr : subtract incr_expr
  45           | not incr_expr
  46           | incr_expr

  47  incr_expr : primary_expr increment
  48            | primary_expr decrement
  49            | primary_expr

  50  opt_expr : expr
  51           |

  52  expr_list : not_empty_expr_list
  53            |

  54  not_empty_expr_list : expr comma not_empty_expr_list
  55                      | expr

  56  primary_expr : identifier
  57               | identifier left_paren expr_list right_paren
  58               | integer_literal
  59               | string_literal
  60               | char_literal
  61               | true
  62               | false
  63               | left_paren expr right_paren
  64               | left_brace not_empty_expr_list right_brace
  65               | primary_expr left_bracket expr right_bracket

  66  type : integer
  67       | void
  68       | string
  69       | char
  70       | boolean
  71       | array left_bracket opt_expr right_bracket type
  72       | function type left_paren param_list right_paren

  73  param_list : not_empty_param_list
  74             |

  75  not_empty_param_list : param
  76                       | param comma not_empty_param_list

  77  param : identifier colon type

  78  print : TOKEN_PRINT

  79  function : TOKEN_FUNCTION

  80  for : TOKEN_FOR

  81  if : TOKEN_IF

  82  else : TOKEN_ELSE

  83  return : TOKEN_RETURN

  84  left_brace : TOKEN_LEFT_BRACE

  85  right_brace : TOKEN_RIGHT_BRACE

  86  left_paren : TOKEN_LEFT_PAREN

  87  right_paren : TOKEN_RIGHT_PAREN

  88  left_bracket : TOKEN_LEFT_BRACKET

  89  right_bracket : TOKEN_RIGHT_BRACKET

  90  string : TOKEN_STRING

  91  integer : TOKEN_INTEGER

  92  char : TOKEN_CHAR

  93  void : TOKEN_VOID

  94  boolean : TOKEN_BOOLEAN

  95  array : TOKEN_ARRAY

  96  ge : TOKEN_GE

  97  le : TOKEN_LE

  98  eq : TOKEN_EQ

  99  ne : TOKEN_NE

 100  lt : TOKEN_LT

 101  gt : TOKEN_GT

 102  and : TOKEN_AND

 103  or : TOKEN_OR

 104  not : TOKEN_NOT

 105  increment : TOKEN_INCREMENT

 106  decrement : TOKEN_DECREMENT

 107  add : TOKEN_ADD

 108  subtract : TOKEN_SUBTRACT

 109  multiply : TOKEN_MULTIPLY

 110  divide : TOKEN_DIVIDE

 111  modulus : TOKEN_MODULUS

 112  exponentiate : TOKEN_EXPONENTIATE

 113  assign : TOKEN_ASSIGN

 114  comma : TOKEN_COMMA

 115  colon : TOKEN_COLON

 116  semicolon : TOKEN_SEMICOLON

 117  true : TOKEN_TRUE

 118  false : TOKEN_FALSE

 119  char_literal : TOKEN_CHAR_LITERAL

 120  integer_literal : TOKEN_INTEGER_LITERAL

 121  string_literal : TOKEN_STRING_LITERAL

 122  identifier : TOKEN_IDENTIFIER

state 0
	$accept : . program $end  (0)

	TOKEN_IDENTIFIER  shift 1
	.  error

	program  goto 2
	decl_list  goto 3
	decl  goto 4
	identifier  goto 5


state 1
	identifier : TOKEN_IDENTIFIER .  (122)

	.  reduce 122


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : decl_list .  (1)

	.  reduce 1


state 4
	decl_list : decl . decl_list  (2)
	decl_list : decl .  (3)

	TOKEN_IDENTIFIER  shift 1
	$end  reduce 3

	decl_list  goto 6
	decl  goto 4
	identifier  goto 5


state 5
	decl : identifier . colon type assign expr semicolon  (4)
	decl : identifier . colon type semicolon  (5)
	decl : identifier . colon type assign left_brace stmt_list right_brace  (6)

	TOKEN_COLON  shift 7
	.  error

	colon  goto 8


state 6
	decl_list : decl decl_list .  (2)

	.  reduce 2


state 7
	colon : TOKEN_COLON .  (115)

	.  reduce 115


state 8
	decl : identifier colon . type assign expr semicolon  (4)
	decl : identifier colon . type semicolon  (5)
	decl : identifier colon . type assign left_brace stmt_list right_brace  (6)

	TOKEN_FUNCTION  shift 9
	TOKEN_STRING  shift 10
	TOKEN_INTEGER  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_VOID  shift 13
	TOKEN_BOOLEAN  shift 14
	TOKEN_ARRAY  shift 15
	.  error

	type  goto 16
	integer  goto 17
	void  goto 18
	string  goto 19
	char  goto 20
	boolean  goto 21
	array  goto 22
	function  goto 23


state 9
	function : TOKEN_FUNCTION .  (79)

	.  reduce 79


state 10
	string : TOKEN_STRING .  (90)

	.  reduce 90


state 11
	integer : TOKEN_INTEGER .  (91)

	.  reduce 91


state 12
	char : TOKEN_CHAR .  (92)

	.  reduce 92


state 13
	void : TOKEN_VOID .  (93)

	.  reduce 93


state 14
	boolean : TOKEN_BOOLEAN .  (94)

	.  reduce 94


state 15
	array : TOKEN_ARRAY .  (95)

	.  reduce 95


state 16
	decl : identifier colon type . assign expr semicolon  (4)
	decl : identifier colon type . semicolon  (5)
	decl : identifier colon type . assign left_brace stmt_list right_brace  (6)

	TOKEN_ASSIGN  shift 24
	TOKEN_SEMICOLON  shift 25
	.  error

	assign  goto 26
	semicolon  goto 27


state 17
	type : integer .  (66)

	.  reduce 66


state 18
	type : void .  (67)

	.  reduce 67


state 19
	type : string .  (68)

	.  reduce 68


state 20
	type : char .  (69)

	.  reduce 69


state 21
	type : boolean .  (70)

	.  reduce 70


state 22
	type : array . left_bracket opt_expr right_bracket type  (71)

	TOKEN_LEFT_BRACKET  shift 28
	.  error

	left_bracket  goto 29


state 23
	type : function . type left_paren param_list right_paren  (72)

	TOKEN_FUNCTION  shift 9
	TOKEN_STRING  shift 10
	TOKEN_INTEGER  shift 11
	TOKEN_CHAR  shift 12
	TOKEN_VOID  shift 13
	TOKEN_BOOLEAN  shift 14
	TOKEN_ARRAY  shift 15
	.  error

	type  goto 30
	integer  goto 17
	void  goto 18
	string  goto 19
	char  goto 20
	boolean  goto 21
	array  goto 22
	function  goto 23


state 24
	assign : TOKEN_ASSIGN .  (113)

	.  reduce 113


state 25
	semicolon : TOKEN_SEMICOLON .  (116)

	.  reduce 116


state 26
	decl : identifier colon type assign . expr semicolon  (4)
	decl : identifier colon type assign . left_brace stmt_list right_brace  (6)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	expr  goto 40
	and_expr  goto 41
	compare_expr  goto 42
	add_expr  goto 43
	mul_expr  goto 44
	expon_expr  goto 45
	neg_expr  goto 46
	incr_expr  goto 47
	primary_expr  goto 48
	identifier  goto 49
	string_literal  goto 50
	integer_literal  goto 51
	char_literal  goto 52
	left_brace  goto 53
	left_paren  goto 54
	subtract  goto 55
	not  goto 56
	true  goto 57
	false  goto 58


state 27
	decl : identifier colon type semicolon .  (5)

	.  reduce 5


state 28
	left_bracket : TOKEN_LEFT_BRACKET .  (88)

	.  reduce 88


state 29
	type : array left_bracket . opt_expr right_bracket type  (71)
	opt_expr : .  (51)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	TOKEN_RIGHT_BRACKET  reduce 51

	expr  goto 59
	and_expr  goto 41
	compare_expr  goto 42
	add_expr  goto 43
	mul_expr  goto 44
	expon_expr  goto 45
	neg_expr  goto 46
	incr_expr  goto 47
	opt_expr  goto 60
	primary_expr  goto 48
	identifier  goto 49
	string_literal  goto 50
	integer_literal  goto 51
	char_literal  goto 52
	left_brace  goto 61
	left_paren  goto 54
	subtract  goto 55
	not  goto 56
	true  goto 57
	false  goto 58


state 30
	type : function type . left_paren param_list right_paren  (72)

	TOKEN_LEFT_PAREN  shift 32
	.  error

	left_paren  goto 62


state 31
	left_brace : TOKEN_LEFT_BRACE .  (84)

	.  reduce 84


state 32
	left_paren : TOKEN_LEFT_PAREN .  (86)

	.  reduce 86


state 33
	not : TOKEN_NOT .  (104)

	.  reduce 104


state 34
	subtract : TOKEN_SUBTRACT .  (108)

	.  reduce 108


state 35
	true : TOKEN_TRUE .  (117)

	.  reduce 117


state 36
	false : TOKEN_FALSE .  (118)

	.  reduce 118


state 37
	char_literal : TOKEN_CHAR_LITERAL .  (119)

	.  reduce 119


state 38
	integer_literal : TOKEN_INTEGER_LITERAL .  (120)

	.  reduce 120


state 39
	string_literal : TOKEN_STRING_LITERAL .  (121)

	.  reduce 121


state 40
	decl : identifier colon type assign expr . semicolon  (4)
	expr : expr . assign and_expr  (23)

	TOKEN_ASSIGN  shift 24
	TOKEN_SEMICOLON  shift 25
	.  error

	assign  goto 63
	semicolon  goto 64


state 41
	expr : and_expr .  (24)
	and_expr : and_expr . and compare_expr  (25)
	and_expr : and_expr . or compare_expr  (26)

	TOKEN_AND  shift 65
	TOKEN_OR  shift 66
	TOKEN_RIGHT_BRACE  reduce 24
	TOKEN_RIGHT_PAREN  reduce 24
	TOKEN_RIGHT_BRACKET  reduce 24
	TOKEN_ASSIGN  reduce 24
	TOKEN_COMMA  reduce 24
	TOKEN_SEMICOLON  reduce 24

	and  goto 67
	or  goto 68


state 42
	and_expr : compare_expr .  (27)

	.  reduce 27


state 43
	compare_expr : add_expr . ne add_expr  (28)
	compare_expr : add_expr . gt add_expr  (29)
	compare_expr : add_expr . ge add_expr  (30)
	compare_expr : add_expr . lt add_expr  (31)
	compare_expr : add_expr . le add_expr  (32)
	compare_expr : add_expr . eq add_expr  (33)
	compare_expr : add_expr .  (34)
	add_expr : add_expr . add mul_expr  (35)
	add_expr : add_expr . subtract mul_expr  (36)

	TOKEN_GE  shift 69
	TOKEN_LE  shift 70
	TOKEN_EQ  shift 71
	TOKEN_NE  shift 72
	TOKEN_LT  shift 73
	TOKEN_GT  shift 74
	TOKEN_ADD  shift 75
	TOKEN_SUBTRACT  shift 34
	TOKEN_RIGHT_BRACE  reduce 34
	TOKEN_RIGHT_PAREN  reduce 34
	TOKEN_RIGHT_BRACKET  reduce 34
	TOKEN_AND  reduce 34
	TOKEN_OR  reduce 34
	TOKEN_ASSIGN  reduce 34
	TOKEN_COMMA  reduce 34
	TOKEN_SEMICOLON  reduce 34

	ne  goto 76
	gt  goto 77
	ge  goto 78
	lt  goto 79
	le  goto 80
	eq  goto 81
	add  goto 82
	subtract  goto 83


state 44
	add_expr : mul_expr .  (37)
	mul_expr : mul_expr . multiply expon_expr  (38)
	mul_expr : mul_expr . divide expon_expr  (39)
	mul_expr : mul_expr . modulus expon_expr  (40)

	TOKEN_MULTIPLY  shift 84
	TOKEN_DIVIDE  shift 85
	TOKEN_MODULUS  shift 86
	TOKEN_RIGHT_BRACE  reduce 37
	TOKEN_RIGHT_PAREN  reduce 37
	TOKEN_RIGHT_BRACKET  reduce 37
	TOKEN_GE  reduce 37
	TOKEN_LE  reduce 37
	TOKEN_EQ  reduce 37
	TOKEN_NE  reduce 37
	TOKEN_LT  reduce 37
	TOKEN_GT  reduce 37
	TOKEN_AND  reduce 37
	TOKEN_OR  reduce 37
	TOKEN_ADD  reduce 37
	TOKEN_SUBTRACT  reduce 37
	TOKEN_ASSIGN  reduce 37
	TOKEN_COMMA  reduce 37
	TOKEN_SEMICOLON  reduce 37

	multiply  goto 87
	divide  goto 88
	modulus  goto 89


state 45
	mul_expr : expon_expr .  (41)

	.  reduce 41


state 46
	expon_expr : neg_expr . exponentiate expon_expr  (42)
	expon_expr : neg_expr .  (43)

	TOKEN_EXPONENTIATE  shift 90
	TOKEN_RIGHT_BRACE  reduce 43
	TOKEN_RIGHT_PAREN  reduce 43
	TOKEN_RIGHT_BRACKET  reduce 43
	TOKEN_GE  reduce 43
	TOKEN_LE  reduce 43
	TOKEN_EQ  reduce 43
	TOKEN_NE  reduce 43
	TOKEN_LT  reduce 43
	TOKEN_GT  reduce 43
	TOKEN_AND  reduce 43
	TOKEN_OR  reduce 43
	TOKEN_ADD  reduce 43
	TOKEN_SUBTRACT  reduce 43
	TOKEN_MULTIPLY  reduce 43
	TOKEN_DIVIDE  reduce 43
	TOKEN_MODULUS  reduce 43
	TOKEN_ASSIGN  reduce 43
	TOKEN_COMMA  reduce 43
	TOKEN_SEMICOLON  reduce 43

	exponentiate  goto 91


state 47
	neg_expr : incr_expr .  (46)

	.  reduce 46


state 48
	incr_expr : primary_expr . increment  (47)
	incr_expr : primary_expr . decrement  (48)
	incr_expr : primary_expr .  (49)
	primary_expr : primary_expr . left_bracket expr right_bracket  (65)

	TOKEN_LEFT_BRACKET  shift 28
	TOKEN_INCREMENT  shift 92
	TOKEN_DECREMENT  shift 93
	TOKEN_RIGHT_BRACE  reduce 49
	TOKEN_RIGHT_PAREN  reduce 49
	TOKEN_RIGHT_BRACKET  reduce 49
	TOKEN_GE  reduce 49
	TOKEN_LE  reduce 49
	TOKEN_EQ  reduce 49
	TOKEN_NE  reduce 49
	TOKEN_LT  reduce 49
	TOKEN_GT  reduce 49
	TOKEN_AND  reduce 49
	TOKEN_OR  reduce 49
	TOKEN_ADD  reduce 49
	TOKEN_SUBTRACT  reduce 49
	TOKEN_MULTIPLY  reduce 49
	TOKEN_DIVIDE  reduce 49
	TOKEN_MODULUS  reduce 49
	TOKEN_EXPONENTIATE  reduce 49
	TOKEN_ASSIGN  reduce 49
	TOKEN_COMMA  reduce 49
	TOKEN_SEMICOLON  reduce 49

	increment  goto 94
	decrement  goto 95
	left_bracket  goto 96


state 49
	primary_expr : identifier .  (56)
	primary_expr : identifier . left_paren expr_list right_paren  (57)

	TOKEN_LEFT_PAREN  shift 32
	TOKEN_RIGHT_BRACE  reduce 56
	TOKEN_RIGHT_PAREN  reduce 56
	TOKEN_LEFT_BRACKET  reduce 56
	TOKEN_RIGHT_BRACKET  reduce 56
	TOKEN_GE  reduce 56
	TOKEN_LE  reduce 56
	TOKEN_EQ  reduce 56
	TOKEN_NE  reduce 56
	TOKEN_LT  reduce 56
	TOKEN_GT  reduce 56
	TOKEN_AND  reduce 56
	TOKEN_OR  reduce 56
	TOKEN_INCREMENT  reduce 56
	TOKEN_DECREMENT  reduce 56
	TOKEN_ADD  reduce 56
	TOKEN_SUBTRACT  reduce 56
	TOKEN_MULTIPLY  reduce 56
	TOKEN_DIVIDE  reduce 56
	TOKEN_MODULUS  reduce 56
	TOKEN_EXPONENTIATE  reduce 56
	TOKEN_ASSIGN  reduce 56
	TOKEN_COMMA  reduce 56
	TOKEN_SEMICOLON  reduce 56

	left_paren  goto 97


state 50
	primary_expr : string_literal .  (59)

	.  reduce 59


state 51
	primary_expr : integer_literal .  (58)

	.  reduce 58


state 52
	primary_expr : char_literal .  (60)

	.  reduce 60


state 53
	decl : identifier colon type assign left_brace . stmt_list right_brace  (6)
	primary_expr : left_brace . not_empty_expr_list right_brace  (64)
	stmt_list : .  (20)

	TOKEN_PRINT  shift 98
	TOKEN_FOR  shift 99
	TOKEN_IF  shift 100
	TOKEN_RETURN  shift 101
	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	TOKEN_RIGHT_BRACE  reduce 20

	decl  goto 102
	expr  goto 103
	and_expr  goto 41
	compare_expr  goto 42
	add_expr  goto 43
	mul_expr  goto 44
	expon_expr  goto 45
	neg_expr  goto 46
	incr_expr  goto 47
	not_empty_expr_list  goto 104
	primary_expr  goto 48
	stmt  goto 105
	open_stmt  goto 106
	closed_stmt  goto 107
	stmt_list  goto 108
	not_empty_stmt_list  goto 109
	identifier  goto 110
	string_literal  goto 50
	integer_literal  goto 51
	char_literal  goto 52
	left_brace  goto 111
	return  goto 112
	print  goto 113
	for  goto 114
	left_paren  goto 54
	if  goto 115
	subtract  goto 55
	not  goto 56
	true  goto 57
	false  goto 58


state 54
	primary_expr : left_paren . expr right_paren  (63)

	TOKEN_LEFT_BRACE  shift 31
	TOKEN_LEFT_PAREN  shift 32
	TOKEN_NOT  shift 33
	TOKEN_SUBTRACT  shift 34
	TOKEN_TRUE  shift 35
	TOKEN_FALSE  shift 36
	TOKEN_CHAR_LITERAL  shift 37
	TOKEN_INTEGER_LITERAL  shift 38
	TOKEN_STRING_LITERAL  shift 39
	TOKEN_IDENTIFIER  shift 1
	.  error

	expr  goto 116
	and_expr  goto 41
	compare_expr  goto 42
	add_expr  goto 43
	mul_expr  goto 44
	expon_expr  goto 45
	neg_expr  goto 46
	incr_expr  goto 47
	primary_expr  goto 48
	identifier  goto 49
	string_literal  goto 50
	integer_literal  goto 51
	char_literal  goto 52
	left_brace  goto 61
	left_paren  goto 54
	subtract  goto 55
	not  goto 56
	true  goto 57
	false  goto 58


state 55
	neg_expr : subtract . incr_expr  (44)
